packages/flutter_gemma_litertlm/native/litert_lm/include/engine.h

// Opaque pointer for the LiteRT LM Engine.
typedef struct LiteRtLmEngine LiteRtLmEngine;
// Opaque pointer for the LiteRT LM Session.
typedef struct LiteRtLmSession LiteRtLmSession;
// Opaque pointer for the LiteRT LM Responses.
typedef struct LiteRtLmResponses LiteRtLmResponses;
// Opaque pointer for the LiteRT LM Engine Settings.
typedef struct LiteRtLmEngineSettings LiteRtLmEngineSettings;
// Opaque pointer for LiteRT LM Session Config.
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
// Represents the type of input data.
typedef enum {
  kLiteRtLmInputDataTypeText,
  kLiteRtLmInputDataTypeImage,
  kLiteRtLmInputDataTypeImageEnd,
  kLiteRtLmInputDataTypeAudio,
  kLiteRtLmInputDataTypeAudioEnd,
} LiteRtLmInputDataType;
// Represents a single piece of input data.
typedef struct {
  LiteRtLmInputDataType type;
  // The data pointer. The interpretation depends on the `type`.
  // For kInputText, it's a UTF-8 string.
  // For kInputImage and kInputAudio, it's a pointer to the raw bytes.
  const void* data;
  // The size of the data in bytes.
  size_t size;
} LiteRtLmInputData;
// Sets whether to enable speculative decoding.
//
// @param settings The engine settings.
// @param enable_speculative_decoding Whether to enable speculative decoding.
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_enable_speculative_decoding(
    LiteRtLmEngineSettings* settings, bool enable_speculative_decoding);
// Sets whether to use hardware masking for NPU. Default is true which on
// Intel LunarLake/PantherLake preview silicon causes engine_create to
// crash because the NPU HW mask update path is not fully supported.
// Pass false to force CPU/SIMD mask update fallback.
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_use_hw_masking_for_npu(
    LiteRtLmEngineSettings* settings, bool value);
// Creates a LiteRT LM Engine from the given settings. The caller is responsible
// for destroying the engine using `litert_lm_engine_delete`.
//
// @param settings The engine settings.
// @return A pointer to the created engine, or NULL on failure.
LITERT_LM_C_API_EXPORT
LiteRtLmEngine* litert_lm_engine_create(const LiteRtLmEngineSettings* settings);
// Destroys a LiteRT LM Engine.
//
// @param engine The engine to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_engine_delete(LiteRtLmEngine* engine);
// Creates a LiteRT LM Session. The caller is responsible for destroying the
// session using `litert_lm_session_delete`.
//
// @param engine The engine to create the session from.
// @param config The session config of the session. If NULL, use the default
// session config.
// @return A pointer to the created session, or NULL on failure.
LITERT_LM_C_API_EXPORT
LiteRtLmSession* litert_lm_engine_create_session(LiteRtLmEngine* engine,
                                                 LiteRtLmSessionConfig* config);
// Destroys a LiteRT LM Session.
//
// @param session The session to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_session_delete(LiteRtLmSession* session);
// Cancels the current processing in the session.
//
// @param session The session to cancel processing on.
LITERT_LM_C_API_EXPORT
void litert_lm_session_cancel_process(LiteRtLmSession* session);
// Adds the input prompt/query to the model for starting the prefilling
// process. This is a blocking call and the function will return when the
// prefill process is done.
//
// @param session The session to use.
// @param inputs An array of InputData structs representing the multimodal
//   input.
// @param num_inputs The number of InputData structs in the array.
// @return 0 on success, non-zero on failure.
LITERT_LM_C_API_EXPORT
int litert_lm_session_run_prefill(LiteRtLmSession* session,
                                  const LiteRtLmInputData* inputs,
                                  size_t num_inputs);
// Starts the decoding process for the model to predict the response based
// on the input prompt/query added after using litert_lm_session_run_prefill.
// This is a blocking call and the function will return when the decoding
// process is done.
//
// @param session The session to use.
// @return A pointer to the responses, or NULL on failure. The caller is
//   responsible for deleting the responses using `litert_lm_responses_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_decode(LiteRtLmSession* session);
// Scores the target text after the prefill process is done.
//
// @param session The session to use.
// @param target_text An array of target text strings to score.
// @param num_targets The number of strings in the target_text array.
// @param store_token_lengths Whether to store the token lengths of the target
//   texts in the responses.
// @return A pointer to the responses, or NULL on failure. The caller is
//   responsible for deleting the responses using `litert_lm_responses_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_text_scoring(LiteRtLmSession* session,
                                                      const char** target_text,
                                                      size_t num_targets,
                                                      bool store_token_lengths);
// Generates content from the input prompt.
//
// @param session The session to use for generation.
// @param inputs An array of LiteRtLmInputData structs representing the
// multimodal
//   input.
// @param num_inputs The number of LiteRtLmInputData structs in the array.
// @return A pointer to the responses, or NULL on failure. The caller is
//   responsible for deleting the responses using `litert_lm_responses_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_generate_content(
    LiteRtLmSession* session, const LiteRtLmInputData* inputs,
    size_t num_inputs);
// Destroys a LiteRT LM Responses object.
//
// @param responses The responses to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_responses_delete(LiteRtLmResponses* responses);
// Returns the number of response candidates.
//
// @param responses The responses object.
// @return The number of candidates.
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_candidates(const LiteRtLmResponses* responses);
// Returns the response text at a given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return The response text. The returned string is owned by the `responses`
//   object and is valid only for its lifetime. Returns NULL if index is out of
//   bounds.
LITERT_LM_C_API_EXPORT
const char* litert_lm_responses_get_response_text_at(
    const LiteRtLmResponses* responses, int index);
// Returns whether the response contains a score at the given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return true if the score is available at the given index, false otherwise.
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_score_at(const LiteRtLmResponses* responses,
                                      int index);
// Returns the score at a given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return The score. Returns 0.0f if index is out of bounds or no score is
//   present.
LITERT_LM_C_API_EXPORT
float litert_lm_responses_get_score_at(const LiteRtLmResponses* responses,
                                       int index);
// Returns whether the response contains a token length at the given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return true if the token length is available at the given index, false
//   otherwise.
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_length_at(const LiteRtLmResponses* responses,
                                             int index);
// Returns the token length at a given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return The token length. Returns 0 if index is out of bounds or no token
//   length is present.
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_token_length_at(const LiteRtLmResponses* responses,
                                            int index);
// Returns whether the response contains token scores at the given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return true if token scores are available at the given index, false
// otherwise.
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_scores_at(const LiteRtLmResponses* responses,
                                             int index);
// Returns the number of tokens for which scores are present at a given index.
//
// @param responses The responses object.
// @param index The index of the response.
// @return The number of token scores. Returns 0 if index is out of bounds or no
//   token scores are present.
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_token_scores_at(
    const LiteRtLmResponses* responses, int index);