lib/core/ffi/litert_lm_bindings.dart


  late final _litert_lm_engine_settings_set_enable_speculative_decodingPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<LiteRtLmEngineSettings>, ffi.Bool)>>(
          'litert_lm_engine_settings_set_enable_speculative_decoding');
  late final _litert_lm_engine_settings_set_enable_speculative_decoding =
      _litert_lm_engine_settings_set_enable_speculative_decodingPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, bool)>();

  void litert_lm_engine_settings_set_use_hw_masking_for_npu(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    bool value,
  ) {
    return _litert_lm_engine_settings_set_use_hw_masking_for_npu(
      settings,
      value,
    );
  }

  late final _litert_lm_engine_settings_set_use_hw_masking_for_npuPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<LiteRtLmEngineSettings>, ffi.Bool)>>(
      'litert_lm_engine_settings_set_use_hw_masking_for_npu');
  late final _litert_lm_engine_settings_set_use_hw_masking_for_npu =
      _litert_lm_engine_settings_set_use_hw_masking_for_npuPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, bool)>();

  ffi.Pointer<LiteRtLmEngine> litert_lm_engine_create(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
  ) {
    return _litert_lm_engine_create(
      settings,
    );
  }

  late final _litert_lm_engine_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmEngine> Function(
              ffi.Pointer<LiteRtLmEngineSettings>)>>('litert_lm_engine_create');
  late final _litert_lm_engine_create = _litert_lm_engine_createPtr.asFunction<
      ffi.Pointer<LiteRtLmEngine> Function(
          ffi.Pointer<LiteRtLmEngineSettings>)>();

  void litert_lm_engine_delete(
    ffi.Pointer<LiteRtLmEngine> engine,
  ) {
    return _litert_lm_engine_delete(
      engine,
    );
  }

  late final _litert_lm_engine_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmEngine>)>>(
      'litert_lm_engine_delete');
  late final _litert_lm_engine_delete = _litert_lm_engine_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmEngine>)>();

  ffi.Pointer<LiteRtLmSession> litert_lm_engine_create_session(
    ffi.Pointer<LiteRtLmEngine> engine,
    ffi.Pointer<LiteRtLmSessionConfig> config,
  ) {
    return _litert_lm_engine_create_session(
      engine,
      config,
    );
  }

  late final _litert_lm_engine_create_sessionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmSession> Function(ffi.Pointer<LiteRtLmEngine>,
                  ffi.Pointer<LiteRtLmSessionConfig>)>>(
      'litert_lm_engine_create_session');
  late final _litert_lm_engine_create_session =
      _litert_lm_engine_create_sessionPtr.asFunction<
          ffi.Pointer<LiteRtLmSession> Function(ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<LiteRtLmSessionConfig>)>();

  void litert_lm_session_delete(
    ffi.Pointer<LiteRtLmSession> session,
  ) {
    return _litert_lm_session_delete(
      session,
    );
  }

  late final _litert_lm_session_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmSession>)>>(
      'litert_lm_session_delete');
  late final _litert_lm_session_delete = _litert_lm_session_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmSession>)>();

  void litert_lm_session_cancel_process(
    ffi.Pointer<LiteRtLmSession> session,
  ) {
    return _litert_lm_session_cancel_process(
      session,
    );
  }

  late final _litert_lm_session_cancel_processPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmSession>)>>(
      'litert_lm_session_cancel_process');
  late final _litert_lm_session_cancel_process =
      _litert_lm_session_cancel_processPtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmSession>)>();

  int litert_lm_session_run_prefill(
    ffi.Pointer<LiteRtLmSession> session,
    ffi.Pointer<LiteRtLmInputData> inputs,
    int num_inputs,
  ) {
    return _litert_lm_session_run_prefill(
      session,
      inputs,
      num_inputs,
    );
  }

  late final _litert_lm_session_run_prefillPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<LiteRtLmInputData>,
              ffi.Size)>>('litert_lm_session_run_prefill');
  late final _litert_lm_session_run_prefill =
      _litert_lm_session_run_prefillPtr.asFunction<
          int Function(ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<LiteRtLmInputData>, int)>();

  ffi.Pointer<LiteRtLmResponses> litert_lm_session_run_decode(
    ffi.Pointer<LiteRtLmSession> session,
  ) {
    return _litert_lm_session_run_decode(
      session,
    );
  }

  late final _litert_lm_session_run_decodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmResponses> Function(
              ffi.Pointer<LiteRtLmSession>)>>('litert_lm_session_run_decode');
  late final _litert_lm_session_run_decode =
      _litert_lm_session_run_decodePtr.asFunction<
          ffi.Pointer<LiteRtLmResponses> Function(
              ffi.Pointer<LiteRtLmSession>)>();

  ffi.Pointer<LiteRtLmResponses> litert_lm_session_run_text_scoring(
    ffi.Pointer<LiteRtLmSession> session,
    ffi.Pointer<ffi.Pointer<ffi.Char>> target_text,
    int num_targets,
    bool store_token_lengths,
  ) {
    return _litert_lm_session_run_text_scoring(
      session,
      target_text,
      num_targets,
      store_token_lengths,
    );
  }

  late final _litert_lm_session_run_text_scoringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmResponses> Function(
              ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size,
              ffi.Bool)>>('litert_lm_session_run_text_scoring');
  late final _litert_lm_session_run_text_scoring =
      _litert_lm_session_run_text_scoringPtr.asFunction<
          ffi.Pointer<LiteRtLmResponses> Function(ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, int, bool)>();

  ffi.Pointer<LiteRtLmResponses> litert_lm_session_generate_content(
    ffi.Pointer<LiteRtLmSession> session,
    ffi.Pointer<LiteRtLmInputData> inputs,
    int num_inputs,
  ) {
    return _litert_lm_session_generate_content(
      session,
      inputs,
      num_inputs,
    );
  }

  late final _litert_lm_session_generate_contentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmResponses> Function(
              ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<LiteRtLmInputData>,
              ffi.Size)>>('litert_lm_session_generate_content');
  late final _litert_lm_session_generate_content =
      _litert_lm_session_generate_contentPtr.asFunction<
          ffi.Pointer<LiteRtLmResponses> Function(ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<LiteRtLmInputData>, int)>();

  void litert_lm_responses_delete(
    ffi.Pointer<LiteRtLmResponses> responses,
  ) {
    return _litert_lm_responses_delete(
      responses,
    );
  }

  late final _litert_lm_responses_deletePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmResponses>)>>(
      'litert_lm_responses_delete');
  late final _litert_lm_responses_delete = _litert_lm_responses_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmResponses>)>();

  int litert_lm_responses_get_num_candidates(
    ffi.Pointer<LiteRtLmResponses> responses,
  ) {
    return _litert_lm_responses_get_num_candidates(
      responses,
    );
  }

  late final _litert_lm_responses_get_num_candidatesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<LiteRtLmResponses>)>>(
      'litert_lm_responses_get_num_candidates');
  late final _litert_lm_responses_get_num_candidates =
      _litert_lm_responses_get_num_candidatesPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmResponses>)>();

  ffi.Pointer<ffi.Char> litert_lm_responses_get_response_text_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_get_response_text_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_get_response_text_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_get_response_text_at');
  late final _litert_lm_responses_get_response_text_at =
      _litert_lm_responses_get_response_text_atPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<LiteRtLmResponses>, int)>();

  bool litert_lm_responses_has_score_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_has_score_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_has_score_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_has_score_at');
  late final _litert_lm_responses_has_score_at =
      _litert_lm_responses_has_score_atPtr
          .asFunction<bool Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  double litert_lm_responses_get_score_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_get_score_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_get_score_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Float Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_get_score_at');
  late final _litert_lm_responses_get_score_at =
      _litert_lm_responses_get_score_atPtr
          .asFunction<double Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  bool litert_lm_responses_has_token_length_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_has_token_length_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_has_token_length_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_has_token_length_at');
  late final _litert_lm_responses_has_token_length_at =
      _litert_lm_responses_has_token_length_atPtr
          .asFunction<bool Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  int litert_lm_responses_get_token_length_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_get_token_length_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_get_token_length_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_get_token_length_at');
  late final _litert_lm_responses_get_token_length_at =
      _litert_lm_responses_get_token_length_atPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  bool litert_lm_responses_has_token_scores_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_has_token_scores_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_has_token_scores_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_has_token_scores_at');
  late final _litert_lm_responses_has_token_scores_at =
      _litert_lm_responses_has_token_scores_atPtr
          .asFunction<bool Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  int litert_lm_responses_get_num_token_scores_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_get_num_token_scores_at(
      responses,
      index,
    );
  }
